--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -35,10 +35,21 @@ jobs:
         run: |
           ./tests/codecheck.ps1
           
-      - name: publish test results
-        uses: dorny/test-reporter@0d00bb14cb0cc2c9b8985df6e81dd333188224e1
+      - name: test module
+        id: test_module
+        uses: zyborg/pester-tests-report@v1
         with:
-          name: Code Quality Test
-          path: .tests\pester.codecheck.test.xml
+          include_paths: .tests
+          exclude_tags: skip_ci
+          report_name: module_tests
+          report_title: My Module Tests
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: dump test results
+        shell: pwsh
+        run: |
+          Write-Host 'Total Tests Executed...:  ${{ steps.test_module.outputs.total_count }}'
+          Write-Host 'Total Tests PASSED.....:  ${{ steps.test_module.outputs.passed_count }}'
+          Write-Host 'Total Tests FAILED.....:  ${{ steps.test_module.outputs.failed_count }}'
           
       
