--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -35,7 +35,17 @@ jobs:
         run: |
           ./tests/codecheck.ps1
           
-      - name: Publish Test Results
-        uses: EnricoMi/publish-unit-test-result-action/composite@v1
+      - name: Publish artifact
+        uses: actions/upload-artifact@v3
         with:
-          files: .tests\pester.codecheck.test.xml
+          name: release
+          path: ./bin/release/*
+          
+      - name: Publish PowerShell Module
+        # You may pin to the exact commit or the version.
+        uses: pcgeek86/publish-powershell-module-action@2a7837ce0746ea58c40574d8d6cbc6c44238edb7
+        with:
+          # The filesystem path to the module to import into the environment.
+          modulePath: ./bin/release/*
+          # The NuGet API Key for PowerShell Gallery, with permission to push this module.
+          NuGetApiKey: ${{ secrets.APIKEY }}
